--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "next",
     "build": "next build",
     "export": "next build && next export",
-    "start": "next start"
+    "start": "next start",
+    "deploy": "git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
     "next": "beta",
