--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
     "deploy": "git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
-    "next": "beta",
+    "next": "^8.0.3",
     "nprogress": "^0.2.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-transition-group": "^1.1.3",
-    "reactstrap": "^4.6.2"
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-transition-group": "^2.6.0",
+    "reactstrap": "^7.1.0"
   },
   "devDependencies": {
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^5.0.1",
-    "eslint-plugin-react": "^7.0.1"
+    "eslint": "^5.15.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4"
   }
 }
