--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,34 @@
 {
-  "extends": "airbnb",
+  "env": {
+    "browser": true,
+    "node": true
+  },
+  "extends": [
+    "airbnb",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended",
+    "prettier/react"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
   "rules": {
-    "handle-callback-err": ["error", "^(err|error)$"],
-    "no-console": "off",
-    "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
-    "radix": ["error", "as-needed"],
-    "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }]
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-member-accessibility": "off",
+    "@typescript-eslint/no-non-null-assertion": "warn",
+    "@typescript-eslint/indent": "off",
+    "@typescript-eslint/interface-name-prefix": ["warn", "always"],
+    "import/no-extraneous-dependencies": [
+      "error",
+      { "devDependencies": ["**/*.test.{ts,tsx}"] }
+    ],
+    "import/no-unresolved": ["error", { "ignore": ["charisma-routes"] }],
+    "react/jsx-filename-extension": ["error", { "extensions": [".tsx"] }]
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".ts", ".tsx"]
+      }
+    }
   }
 }
