--- a/package.json
+++ b/package.json
@@ -22,10 +22,31 @@
     "reactstrap": "^7.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/babel__core": "^7.1.0",
+    "@types/eslint": "^4.16.6",
+    "@types/eslint-plugin-prettier": "^2.2.0",
+    "@types/next": "^8.0.1",
+    "@types/nprogress": "^0.0.29",
+    "@types/prettier": "^1.16.1",
+    "@types/react": "^16.8.6",
+    "@types/react-dom": "^16.8.2",
+    "@types/react-transition-group": "^2.0.16",
+    "@types/reactstrap": "^7.1.3",
+    "@types/styled-jsx": "^2.2.8",
+    "@types/zeit__next-typescript": "^0.1.2",
+    "@typescript-eslint/eslint-plugin": "^1.4.2",
+    "@typescript-eslint/parser": "^1.4.2",
+    "@zeit/next-typescript": "^1.1.1",
     "eslint": "^5.15.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4"
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "prettier": "^1.16.4",
+    "typescript": "^3.3.3333"
   }
 }
