--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "dev": "next",
     "build": "next build",
     "export": "next build && next export",
-    "start": "next start",
-    "deploy": "git subtree push --prefix out origin gh-pages"
+    "start": "next start"
   },
   "dependencies": {
     "next": "^8.0.3",
