--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "export": "next build && next export",
-    "start": "next start"
+    "start": "next start",
+    "now-build": "next build && next export -o dist"
   },
   "dependencies": {
     "next": "^8.0.3",
