--- a/.eslintrc
+++ b/.eslintrc
@@ -5,17 +5,22 @@
   },
   "extends": [
     "airbnb",
+    "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "plugin:prettier/recommended",
+    "prettier/@typescript-eslint",
     "prettier/react"
   ],
   "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
   "plugins": ["@typescript-eslint"],
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-member-accessibility": "off",
     "@typescript-eslint/no-non-null-assertion": "warn",
-    "@typescript-eslint/indent": "off",
     "@typescript-eslint/interface-name-prefix": ["warn", "always"],
     "import/no-extraneous-dependencies": [
       "error",
