--- a/package.json
+++ b/package.json
@@ -10,42 +10,40 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "now-build": "next build && next export -o dist"
+    "now-build": "next build && next export -o dist",
+    "lint": "eslint --fix --ext ts,tsx ."
   },
   "dependencies": {
-    "next": "^8.0.3",
+    "next": "^9.0.5",
     "nprogress": "^0.2.0",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-transition-group": "^2.6.0",
-    "reactstrap": "^7.1.0"
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-transition-group": "^4.3.0",
+    "reactstrap": "^8.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/preset-typescript": "^7.3.3",
-    "@types/babel__core": "^7.1.0",
-    "@types/eslint": "^4.16.6",
+    "@babel/core": "^7.6.0",
+    "@types/babel__core": "^7.1.3",
+    "@types/eslint": "^6.1.1",
     "@types/eslint-plugin-prettier": "^2.2.0",
-    "@types/next": "^8.0.1",
-    "@types/nprogress": "^0.0.29",
-    "@types/prettier": "^1.16.1",
-    "@types/react": "^16.8.6",
-    "@types/react-dom": "^16.8.2",
-    "@types/react-transition-group": "^2.0.16",
-    "@types/reactstrap": "^7.1.3",
-    "@types/styled-jsx": "^2.2.8",
-    "@types/zeit__next-typescript": "^0.1.2",
-    "@typescript-eslint/eslint-plugin": "^1.4.2",
-    "@typescript-eslint/parser": "^1.4.2",
-    "@zeit/next-typescript": "^1.1.1",
-    "eslint": "^5.15.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "prettier": "^1.16.4",
-    "typescript": "^3.3.3333"
+    "@types/node": "^12.7.5",
+    "@types/nprogress": "^0.2.0",
+    "@types/prettier": "^1.18.2",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-transition-group": "^4.2.2",
+    "@types/reactstrap": "^8.0.4",
+    "@typescript-eslint/eslint-plugin": "^2.2.0",
+    "@typescript-eslint/parser": "^2.2.0",
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "prettier": "^1.18.2",
+    "typescript": "^3.6.3"
   }
 }
